@@ -128,6 +128,10 @@ jar { // NOTE: this is called by fat.gradle:autoFVT
     finalizedBy assembleBinaryDependencies
 }
 
+test {
+   jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+}
+
 task publishArquillianSupportFeature(type:Copy) {
     dependsOn extractArquillianSupportFeature
     from('build/arquillian-feature-extract/extension')
